--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,14 @@
   "dependencies": {
     "angular": "^1.7.9",
     "angular-resource": "^1.7.9",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.1",
-    "webpack": "^4.41.6",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.41.6"
+  },
+  "devDependencies": {
     "webpack-cli": "^3.3.11"
   }
 }
