--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server ./src -a localhost -p 8001 -c-1",
+    "start": "http-server ./public -a localhost -p 8001 -c-1",
     "build": "npx webpack --config webpack.config.js"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "webpack": "^4.41.6"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
