--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,20 +5,26 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "http-server ./public -a localhost -p 8001 -c-1",
-    "build": "npx webpack --config webpack.config.js"
+    "serve:prod": "webpack-dev-server --config webpack.prod.js",
+    "serve:dev": "webpack-dev-server --config webpack.dev.js",
+    "build": "npx webpack --config webpack.prod.js"
   },
   "dependencies": {
-    "angular": "^1.7.9",
-    "angular-resource": "^1.7.9",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.12.1",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.41.6"
+    "angular": "^1.8.0",
+    "angular-resource": "^1.8.0",
+    "bootstrap": "^4.5.2",
+    "http-server": "^0.12.3"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^4.44.1",
+    "copy-webpack-plugin": "^6.0.3",
+    "html-loader": "^1.1.0",
+    "css-loader": "^3.6.0",
+    "mini-css-extract-plugin": "^0.10.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0"
   }
 }
