--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "angular": "^1.8.0",
     "angular-resource": "^1.8.0",
     "bootstrap": "^4.5.2",
+    "bulma": "^0.9.0",
     "http-server": "^0.12.3",
     "sweetalert2": "^9.17.1"
   },
