--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "bootstrap": "^4.5.2",
     "bulma": "^0.9.0",
     "http-server": "^0.12.3",
-    "sweetalert2": "^9.17.1"
+    "sweetalert2": "^9.17.1",
+    "tabulator-tables": "4.2.7"
   },
   "devDependencies": {
     "webpack": "^4.44.1",
