--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "http-server ./public -a localhost -p 8001 -c-1",
     "serve:prod": "webpack-dev-server --config webpack.prod.js",
-    "serve:dev": "webpack-dev-server --config webpack.dev.js",
+    "serve": "webpack-dev-server --config webpack.dev.js",
     "build": "npx webpack --config webpack.prod.js"
   },
   "dependencies": {
@@ -21,15 +21,15 @@
     "tabulator-tables": "4.2.7"
   },
   "devDependencies": {
-    "webpack": "^4.44.1",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
-    "html-loader": "^1.1.0",
     "css-loader": "^3.6.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.10.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0"
+    "webpack-merge": "^5.1.1"
   }
 }
